k8s/deployment-eu.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandatkollen-eu
  namespace: mandatkollen
spec:
  ports:
    - port: 80
  type: ClusterIP
  selector:
    app: mandatkollen-eu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandatkollen-eu
  namespace: mandatkollen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mandatkollen-eu
  template:
    metadata:
      labels:
        app: mandatkollen-eu
    spec:
      containers:
        - name: mandatkollen-eu
          image: ghcr.io/iteam1337/mandatkollen:0.67.13 # {"$imagepolicy": "flux-system:mandatkollen"}
          command:
            - /bin/sh
            - -c
            - 'VITE_EU=true npm run build && npm run start'
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
