k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandatkollen
  namespace: mandatkollen

spec:
  ports:
    - port: 80
  type: ClusterIP
  selector:
    app: mandatkollen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandatkollen
  namespace: mandatkollen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mandatkollen
  template:
    metadata:
      labels:
        app: mandatkollen
    spec:
      containers:
        - name: mandatkollen
          image: ghcr.io/iteam1337/mandatkollen:0.67.20 # {"$imagepolicy": "flux-system:mandatkollen"}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
