k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mandatkollen
  namespace: mandatkollen
spec:
  ports:
  - port: 80
  type: LoadBalancer
  selector:
    app: mandatkollen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandatkollen
spec:
  selector:
    matchLabels:
      app: mandatkollen
  template:
    metadata:
      labels:
        app: mandatkollen
    spec:
      containers:
      - name: mandatkollen
        image: iteam1337/mandatkollen
        ports:
        - containerPort: 80
