k8s/ingress-eu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandatkollen-ingress-eu
  namespace: mandatkollen
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/http2-push-preload: 'true'
    nginx.ingress.kubernetes.io/proxy-pass-headers: 'Location'
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "Content-Security-Policy: default-src 'self'; script-src https://mandatkollen.se https://matomo.iteam.services; style-src https://mandatkollen.se; font-src https://mandatkollen.se; img-src https://mandatkollen.se; connect-src https://mandatkollen.se https://matomo.iteam.services; manifest-src data:; frame-src 'none'; frame-ancestors 'none'; object-src 'none'; ";
    #   more_set_headers "X-Content-Type-Options: nosniff";
    #   more_set_headers "X-Frame-Options: DENY";
    #   more_set_headers "X-Xss-Protection: 0";
    #   more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
    #   more_set_headers "Cross-Origin-Resource-Policy: same-site";
    #   more_set_headers "Referrer-Policy strict-origin";
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    external-dns.alpha.kubernetes.io/hostname: mandatkollen.eu.

spec:
  tls:
    - hosts:
        - mandatkollen.eu
        - www.mandatkollen.eu
      secretName: mandatkollen-eu-prod-tls
  rules:
    - host: mandatkollen.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mandatkollen-eu
                port:
                  number: 80
